# code-guardian

./: .env.example  .gitignore  CONFIGURACAO.md  CORREÇÃO_GERAÇÃO_TESTES.md  README.md  REFATORACAO_LLM_FACTORY.md  REFATORACAO_STORYCREATOR_COMPLETA.md  REFATORACAO_STORY_CREATOR.md  example_usage.py  main.py  pyproject.toml  run_frontend.bat  run_frontend.ps1  simple_test.py  test_correction.py
.streamlit/: config.toml
agents/: __init__.py  bug_fixer_agent.py  story_agent.py  test_generator_agent.py
api/: __init__.py  app.py  schemas.py
api/middleware/: auth.py  logging.py
api/routers/: __init__.py  code_fixer.py  code_tester.py  file_upload.py  health.py  story_creator.py  test_generation.py
api/services/: __init__.py  file_service.py  orchestrator_service.py
app/: __init__.py  main.py  streamlit_app.py
app/config/: __init__.py  streamlit_config.py
app/pages/: base_page.py  code_tester.py  home.py  story_creator.py
app/utils/: sidebar.py  (+1 more)
config/: __init__.py  settings.py
data/: Política Institucional de Testes Unitários.docx  policy_unit_tests.yaml
demo/: mock_demo.py
docs/: SIDEBAR_NAVIGATION_FIX.md  WIDE_MODE_SETUP.md
frontend/: package-lock.json  tailwind.config.js
schemas/: __init__.py  code_schemas.py  common_schemas.py  story_schemas.py
services/: __init__.py  azure_llm.py  gitlab_service.py  llm_factory.py
src/: __init__.py  config.py  input_handlers.py  llm_calls.py  models.py  orchestrator.py
tests/: __init__.py  test_api.py  test_story_creator_refactored.py
utils/: __init__.py  helpers.py  logging_config.py  validators.py
(+15 files in other folders)
